--- a/src/ios/ScanQrcodeVC.xib
+++ b/src/ios/ScanQrcodeVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="17B1003" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -12,7 +12,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ScanQrcodeVC">
             <connections>
+                <outlet property="activityIndicatorBackView" destination="SOm-fC-rH2" id="Njb-qe-cUt"/>
+                <outlet property="choosePhotoBtn" destination="9bX-go-Vbv" id="Wap-cU-Jp4"/>
                 <outlet property="descriptionLabel" destination="lsf-O3-KmJ" id="Im6-Mf-2eD"/>
+                <outlet property="loadingView" destination="Iuh-OE-q44" id="Vf3-0r-GVH"/>
                 <outlet property="scanImageView" destination="2TH-Vh-DZj" id="2rK-hB-zen"/>
                 <outlet property="scanView" destination="Xzl-K3-Xen" id="UGQ-7i-Kck"/>
                 <outlet property="titleLabel" destination="Tcr-js-iQh" id="sLz-Zb-Cid"/>
@@ -89,37 +92,75 @@
                                 <constraint firstAttribute="width" secondItem="2TH-Vh-DZj" secondAttribute="height" id="I7E-Db-o6L"/>
                             </constraints>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请扫描设备二维码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lsf-O3-KmJ">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请扫描设备二维码" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lsf-O3-KmJ">
                             <rect key="frame" x="122" y="383.5" width="131" height="19.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <color key="textColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9bX-go-Vbv">
+                            <rect key="frame" x="32" y="427" width="310" height="44"/>
+                            <color key="backgroundColor" red="0.30588235294117649" green="0.55294117647058827" blue="0.92549019607843142" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="44" id="l3W-j1-HHT"/>
+                            </constraints>
+                            <state key="normal" title="相册">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                    <integer key="value" value="22"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                            <connections>
+                                <action selector="choosePhotoAction:" destination="-1" eventType="touchUpInside" id="GuN-sh-AEC"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
+                        <constraint firstItem="9bX-go-Vbv" firstAttribute="leading" secondItem="Xzl-K3-Xen" secondAttribute="leading" constant="32" id="1dT-Da-Dfv"/>
+                        <constraint firstItem="9bX-go-Vbv" firstAttribute="top" secondItem="lsf-O3-KmJ" secondAttribute="bottom" constant="24" id="D64-0c-CpH"/>
+                        <constraint firstItem="9bX-go-Vbv" firstAttribute="centerX" secondItem="Xzl-K3-Xen" secondAttribute="centerX" id="Tbc-AA-t9I"/>
                         <constraint firstItem="lsf-O3-KmJ" firstAttribute="top" secondItem="2TH-Vh-DZj" secondAttribute="bottom" constant="30" id="d5S-Gm-Rd1"/>
                         <constraint firstItem="2TH-Vh-DZj" firstAttribute="centerY" secondItem="Xzl-K3-Xen" secondAttribute="centerY" multiplier="0.8" id="h67-vs-9Zj"/>
                         <constraint firstItem="lsf-O3-KmJ" firstAttribute="centerX" secondItem="Xzl-K3-Xen" secondAttribute="centerX" id="pBY-kG-0kh"/>
                         <constraint firstItem="2TH-Vh-DZj" firstAttribute="centerX" secondItem="Xzl-K3-Xen" secondAttribute="centerX" id="s0F-6Q-mZv"/>
-                        <constraint firstItem="2TH-Vh-DZj" firstAttribute="width" secondItem="Xzl-K3-Xen" secondAttribute="width" multiplier="0.6" id="wfM-Qq-bDM"/>
+                        <constraint firstItem="2TH-Vh-DZj" firstAttribute="width" secondItem="Xzl-K3-Xen" secondAttribute="width" multiplier="0.6" identifier="borderScaleConstraint" id="wfM-Qq-bDM"/>
                     </constraints>
                     <connections>
                         <outlet property="boundaryView" destination="2TH-Vh-DZj" id="gNg-xC-cgd"/>
                     </connections>
                 </view>
+                <view alpha="0.40000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SOm-fC-rH2">
+                    <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                    <subviews>
+                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Iuh-OE-q44">
+                            <rect key="frame" x="169" y="253" width="37" height="37"/>
+                        </activityIndicatorView>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstItem="Iuh-OE-q44" firstAttribute="centerY" secondItem="SOm-fC-rH2" secondAttribute="centerY" multiplier="0.9" id="GPg-fM-d3e"/>
+                        <constraint firstItem="Iuh-OE-q44" firstAttribute="centerX" secondItem="SOm-fC-rH2" secondAttribute="centerX" id="q0e-EE-kXP"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstAttribute="bottom" secondItem="SOm-fC-rH2" secondAttribute="bottom" id="2ld-UK-baj"/>
+                <constraint firstItem="SOm-fC-rH2" firstAttribute="top" secondItem="Xe1-U0-5IH" secondAttribute="bottom" id="91E-Zh-sTk"/>
                 <constraint firstItem="Xe1-U0-5IH" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="GUi-L4-vuq"/>
+                <constraint firstItem="SOm-fC-rH2" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="KbH-CP-71g"/>
                 <constraint firstAttribute="trailing" secondItem="Xzl-K3-Xen" secondAttribute="trailing" id="QHc-Jf-Ky8"/>
                 <constraint firstItem="Xzl-K3-Xen" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="aym-zy-ehu"/>
                 <constraint firstItem="Xzl-K3-Xen" firstAttribute="top" secondItem="Xe1-U0-5IH" secondAttribute="bottom" id="cWo-dh-Pd9"/>
                 <constraint firstAttribute="bottom" secondItem="Xzl-K3-Xen" secondAttribute="bottom" id="ciP-3s-ixf"/>
+                <constraint firstAttribute="trailing" secondItem="SOm-fC-rH2" secondAttribute="trailing" id="jiZ-Q5-1CT"/>
                 <constraint firstItem="Xe1-U0-5IH" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="s3f-UZ-WKw"/>
                 <constraint firstAttribute="trailing" secondItem="Xe1-U0-5IH" secondAttribute="trailing" id="wgS-fa-AvP"/>
             </constraints>
-            <point key="canvasLocation" x="33.5" y="54.5"/>
+            <point key="canvasLocation" x="53" y="16"/>
         </view>
     </objects>
     <resources>
